fix env bug and style.css changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
   </p>
 </div>
 <!-- for loop using jinja templating -->
-<div class="container w-50">
+<div class="container anime-list">
   <ul class="list-group">
     {% for anime in mylist %}
     <li class="list-group-item text-center">{{anime}}</li>
